Bug: header spacing on smaller screens
I switched from live-sever extension to cli tool.

Certain things would break and randomly unbreak and using this tool should make me more confident if there is a real bug or not.

Includes changes that break site on tablet sizes and above.

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -72,7 +72,7 @@ header {
   width: 100%;
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: space-around;
   text-wrap: nowrap;
   position: sticky;
   top: 0;
@@ -182,7 +182,7 @@ p {
 
   header {
     padding: 12px 12px 4px 12px;
-    gap: 1rem;
+    gap: 2rem;
   }
 
   nav {
@@ -376,25 +376,21 @@ p {
     font-size: 24px;
   }
 
+  header {
+    padding: 1rem;
+  }
+
   p {
     text-align: left;
   }
 
   #hero {
-    max-width: 800px !important;
+    .hero-img {
+      min-width: 100px;
+      max-width: 900px;
+      height: auto;
+    }
   }
-
-  .hero-inner {
-    max-width: inherit;
-    margin: 0 auto;
-  }
-
-  .hero-img {
-    width: 100%;
-    max-width: 800px;
-    height: auto;
-  }
-
 }
 
 // #endregion
